cmake_minimum_required(VERSION 3.23)
project(CPlusPlusPrimer)

set(CMAKE_CXX_STANDARD 14)

add_executable(CPlusPlusPrimer 12-1-4-demo.cpp introduction.cpp 12-1-5-demo.cpp 12-1-3-demo.cpp 12-1-6-demo.cpp 12-2-demo.cpp 12-1-1-demo.cpp 12-1-2-demo.cpp 11-1-demo.cpp 11-2-demo.cpp 11-3-demo.cpp 11-4-demo.cpp 13-1-1-demo.cpp 13-1-2-demo.cpp 13-1-3-demo.cpp 13-1-4-demo.cpp 13-3-demo.cpp 13-6-demo.cpp)
