cmake_minimum_required(VERSION 3.23)
project(CPlusPlusPrimer)

set(CMAKE_CXX_STANDARD 14)

add_executable(CPlusPlusPrimer 12-1-4-demo.cpp introduction.cpp 12-1-5-demo.cpp 12-1-3-demo.cpp 12-1-6-demo.cpp 12-2-demo.cpp 12-1-1-demo.cpp 12-1-2-demo.cpp 11-1-demo.cpp 11-2-demo.cpp 11-3-demo.cpp 11-4-demo.cpp 13-1-1-demo.cpp 13-1-2-demo.cpp 13-1-3-demo.cpp 13-1-4-demo.cpp 13-3-demo.cpp 13-6-demo.cpp 14-1-demo.cpp 14-2-demo.cpp 14-3-demo.cpp 14-4-demo.cpp 14-5-demo.cpp 14-6-demo.cpp 14-7-demo.cpp 14-8-demo.cpp 15-1-demo.cpp 15-2-demo.cpp 15-3-demo.cpp 15-4-demo.cpp 15-5-demo.cpp 15-5-2-demo.cpp 15-6-demo.cpp 15-7-demo.cpp 15-8-demo.cpp 16-1-1-demo.cpp 16-1-2-demo.cpp 16-1-3-demo.cpp 16-1-4-demo.cpp 16-1-5-demo.cpp 16-2-1-demo.cpp 16-2-2-demo.cpp 16-2-3-demo.cpp 16-3-demo.cpp 16-4-demo.cpp 16-5-demo.cpp 18-1-demo.cpp namespace/hello.cpp namespace/main.cpp namespace/hello.h)
